...

const defaultDuration = Duration(milliseconds: 250);

// Form Error
final RegExp emailValidatorRegExp =
    RegExp(r"^[a-zA-Z0-9.]+@[a-zA-Z0-9]+\.[a-zA-Z]+");
const String kUsernameNullError = "Please enter your username";
const String kEmailNullError = "Please enter your email";
const String kInvalidEmailError = "Please enter Valid Email";
const String kPassNullError = "Please enter your password";
const String kShortPassError = "Password is too short";
const String kMatchPassError = "Passwords don't match";
const String kNamelNullError = "Please enter your name";
const String kPhoneNumberNullError = "Please enter your phone number";
const String kAddressNullError = "Please enter your address";
const String kWrongPassError = "Wrong password";
const String kUserNotFoundError = "User not found";
const String kUserExistError = "User already exist";
const String kShortOTPError = "OTP is too short";
const String kWrongOTPError = "OTP is wrong";
const String kOTPNullError = "Please enter OTP";
const String kOTPNotRequested = "Please request an OTP";
const String kWrongOldPassword = "Your old password is wrong";
const String kOldPassNullError = "Please enter your old password";
...
