...

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        iconTheme: IconThemeData(color: Colors.black),
        // title: Text("Forgot Password", style: TextStyle(color: Colors.black)),
        backgroundColor: Colors.lightBlue[50],
      ),
      backgroundColor: Colors.lightBlue[50],
      body: SizedBox(
        width: double.infinity,
        child: SingleChildScrollView(
...
                return "";
              }
              return null;
            },
            decoration: InputDecoration(
              //labelText: "Email",
              hintText: "Enter your email",
              hintStyle: GoogleFonts.montserrat(
                  textStyle: TextStyle(color: Colors.black38)),
              fillColor: Colors.white, filled: true,
              //fillColor: Color(0xFFFFC61F), filled: none,
              focusedBorder: OutlineInputBorder(
                borderRadius: BorderRadius.circular(20.0),
...
            },
            inputFormatters: [
              LengthLimitingTextInputFormatter(5),
            ],
            keyboardType: TextInputType.number,
            decoration: InputDecoration(
              hintText: "Enter OTP",
              hintStyle: GoogleFonts.montserrat(
                  textStyle: TextStyle(color: Colors.black38)),
              fillColor: Colors.white,
              filled: true,
              focusedBorder: OutlineInputBorder(
                borderRadius: BorderRadius.circular(20.0),
...
              ),
              labelStyle: TextStyle(
                color: Color(0xFF212121),
              ),
              suffixIcon: TextButton(
                child: Text(
                  timerStart ? "Resend in ($_start)" : "Request OTP",
                ),
                onPressed: timerStart
                    ? null
                    : () async {
                        if (_formKey.currentState!.validate()) {
                          // Do what you want to do
...
          // SizedBox(height: getProportionateScreenHeight(50)),
          FormError(errors: errors),
          SizedBox(height: SizeConfig.screenHeight! * 0.25),
          Padding(
            padding: EdgeInsets.only(left: 150, bottom: 10, right: 40, top: 10),
            child: RoundedButton(
              text: "Continue",
              press: () async {
                if (_formKey.currentState!.validate()) {
                  // Do what you want to do
                  // bool exist =
                  //     await Authentication.checkUserExist(emailController.text);
                  // if (exist) {
...
