...
import 'package:shimmer/shimmer.dart';
import 'package:blossom/screen/dashboard.dart';
import 'package:blossom/screen/forgot_password_change.dart';
import 'package:blossom/screen/redeem_voucher.dart';

class Profile extends StatefulWidget {
  const Profile({Key? key}) : super(key: key);

  @override
  State<Profile> createState() => _ProfileState();
}

class _ProfileState extends State<Profile> {
...
        title: const Text(''),
        centerTitle: true,
        backgroundColor: Colors.white,
        iconTheme: const IconThemeData(color: Colors.black),
        actions: [
          IconButton(
            tooltip: "Change Password",
            icon: Icon(
              Icons.manage_accounts_outlined,
            ),
            onPressed: () {
              Navigator.push(
                context,
...
                ),
              );
            },
          ),
          IconButton(
            icon: Icon(Icons.logout_rounded),
            tooltip: "Logout",
            onPressed: () {
              showDialog(
                context: context,
                //barrierDismissible: false,//user must tap button to dismiss
                builder: (_) => AlertDialog(
                  title: AppTextBold(
...
                        color: Colors.blue,
                      ),
                      onPressed: () => Navigator.pop(context, 'Cancel'),
                    ),
                    TextButton(
                      child: AppTextNormal(
                        text: "Confirm to log out",
                        size: 14,
                        color: Colors.blue,
                      ),
                      onPressed: () async {
                        //log out
                        final prefs = await SharedPreferences.getInstance();
...
