...
          addError(error: kOldPassNullError);
          return "";
        }
        return null;
      },
      decoration: InputDecoration(
        hintText: "Enter your old password",
        hintStyle:
            GoogleFonts.montserrat(textStyle: TextStyle(color: Colors.black38)),
        fillColor: Colors.white, filled: true,
        // If  you are using latest version of flutter then lable text and hint text shown like this
        // if you r using flutter less then 1.20.* then maybe this is not working properly
        floatingLabelBehavior: FloatingLabelBehavior.always,
...
          addError(error: kMatchPassError);
          return "";
        }
        return null;
      },
      decoration: InputDecoration(
        hintText: "Re-enter your new password",
        hintStyle:
            GoogleFonts.montserrat(textStyle: TextStyle(color: Colors.black38)),
        fillColor: Colors.white,
        filled: true,
        floatingLabelBehavior: FloatingLabelBehavior.always,
        suffixIcon: const Align(
...
          addError(error: kShortPassError);
          return "";
        }
        return null;
      },
      decoration: InputDecoration(
        hintText: "Enter your new password",
        hintStyle:
            GoogleFonts.montserrat(textStyle: TextStyle(color: Colors.black38)),
        fillColor: Colors.white,
        filled: true,
        floatingLabelBehavior: FloatingLabelBehavior.always,
        suffixIcon: const Align(
...
